gitops-manifests/gitops-tools/redis/redis-commander.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: redis
  labels:
    app: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
      - name: redis-commander
        image: rediscommander/redis-commander:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: redis
  labels:
    app: redis-commander
  annotations:
    link.argocd.argoproj.io/external-link: http://localhost:30097
spec:
  type: NodePort
  selector:
    app: redis-commander
  ports:
  - name: web
    port: 8081
    targetPort: 8081
    nodePort: 30097
